--- a/index.html
+++ b/index.html
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ポートフォリオ</title>
-    <link rel="stylesheet" href="main.css" />
-  </head>
-  <body>
-    <div class="container">
-      <h1>XXX's Portfolio</h1>
-      <p>関西在住の高専4年生です。メカトロ系の学科に在籍しています。</p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sorachi Tagaya portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Sorachi Tagaya portfolio</h1>
+        <nav>
+            <a href="index.html" class="active">ホーム</a>
+            <a href="skills.html">スキル</a>
+            <a href="achievements.html">成果物</a>
+        </nav>        
+    </header>
 
-      <h2>Works</h2>
+    <main>
+        <!-- 自己紹介セクション -->
+        <section id="about" class="content-section">
+            <h2>自己紹介</h2>
+            <ul>
+                <li>高専4年生</li>
+                <li>好きなこと</li>
+                <ul>
+                    <li>web開発</li>
+                    <li>ロボット作り</li>
+                </ul>
+            </ul>            
+        </section>
 
-      <h3>2022年: 自律走行ロボットの設計製作</h3>
-      <p>
-        3年次に「<strong>自律走行ロボットの開発プロジェクト</strong>」に取り組みました。
-      </p>
-      <p>
-        具体的には超音波センサ（検知範囲:5-100cm）を用いた障害物回避システムを搭載した「キャタピラ型走行ロボット」をクラスメイト4名とチームを組んで、要件定義から完成まで約16週間かけて取り組みました。自分は、Fusion
-        360（3次元CAD）を用いた機械設計を担当し、シャーシやマウント類など計127個の部品を設計しました（加工も共同で担当しました）。また、制御系の補助として、Arduino
-        で動かす自律制御プログラムの実装とテスト、調整も担当しました。。
-      </p>
-      <div class="img-2col-container">
-        <div>
-          <img src="work-01.jpg" />
-        </div>
-        <div>
-          <img src="work-02.jpg" />
-        </div>
-      </div>
+        <!-- 新しいリンクセクション -->
+        <section id="links" class="content-section">
+            <h2>他のページを見る</h2>
+            <p>詳細な情報は以下のリンクからご覧いただけます。</p>
+            <div class="buttons">
+                <a href="skills.html" class="button">スキルを見る</a>
+                <a href="achievements.html" class="button">成果物を見る</a>
+            </div>
+        </section>
+    </main>
 
-      <h2>Skills</h2>
-      <p>
-        授業やクラブ活動、文化祭活動、趣味を含めて利用経験のあるハードウェアやソフトウェアの一覧です。習熟度の目安として累積使用時間が10時間以上のものを「★」、30時間以上を「★★」、100時間以上を「★★★」と表記しています。
-      </p>
-      <ul>
-        <li>Fusion 360（3D-CAD）</li>
-        <li>汎用旋盤</li>
-        <li>ボール盤</li>
-        <li>フライス盤</li>
-        <li>Arduino</li>
-        <li>電子工作（ブレッドボード）</li>
-        <li>Python</li>
-      </ul>
-    </div>
-  </body>
+    <footer>
+        <p>Sorachi Tagaya portfolio</p>
+    </footer>
+</body>
 </html>
