--- a/achievements.html
+++ b/achievements.html
@@ -60,6 +60,15 @@
             </div>
             <a href="internship.html" class="button">詳細</a>
         </section>
+        <section class="content-section">
+            <h2>インターンシップ（個人）</h2>
+            <p>認定NPO法人CLACKのインターンシップに参加させていただき、施設「よどがわベース」のLPを政策しました。</p>
+            <div class="simple-image-container">
+                <!-- <img src="achievements-basicresearch.png"> -->
+                <img src="yodogabwabase-logo.png">
+            </div>
+            <a href="https://yodogawa-base.clack.ne.jp/" class="button">LPを見る</a>
+        </section>
     </main>
 
     <footer>
