--- a/achievements.html
+++ b/achievements.html
@@ -61,13 +61,13 @@
             <a href="internship.html" class="button">詳細</a>
         </section>
         <section class="content-section">
-            <h2>インターンシップ（個人）</h2>
-            <p>認定NPO法人CLACKのインターンシップに参加させていただき、施設「よどがわベース」のLPを政策しました。</p>
+            <h2>NPO活動</h2>
+            <p>認定NPO法人CLACKにて、生徒・ユーザー・クリエイター・クルー等として活動しました。</p>
             <div class="simple-image-container">
                 <!-- <img src="achievements-basicresearch.png"> -->
-                <img src="yodogabwabase-logo.png">
+                <img src="clack-logo.png">
             </div>
-            <a href="https://yodogawa-base.clack.ne.jp/" class="button">LPを見る</a>
+            <a href="clack.html" class="button">詳細</a>
         </section>
     </main>
 
