--- a/clack.html
+++ b/clack.html
@@ -24,7 +24,16 @@
         </section>
         <section class="content-section">
             <h2>インターンシップ（個人）</h2>
-            <p>インターンシップに参加させていただき、施設「よどがわベース」のLPを政策しました。</p>
+            <p>インターンシップに参加させていただき、施設「よどがわベース」のLPを制作しました。</p>
+            <div class="simple-image-container">
+                <!-- <img src="achievements-basicresearch.png"> -->
+                <img src="yodogabwabase-logo.png">
+            </div>
+            <a href="https://yodogawa-base.clack.ne.jp/" class="button">LPを見る</a>
+        </section>
+        <section class="content-section">
+            <h2>よどがわベース</h2>
+            <p>施設「よどがわベース」にて、クルー（スタッフ）、およびクリエイター（テクニカルサポートスタッフ）として活動しています。</p>
             <div class="simple-image-container">
                 <!-- <img src="achievements-basicresearch.png"> -->
                 <img src="yodogabwabase-logo.png">
